Referenced full version of SDK instead of min one

--- a/widget.html
+++ b/widget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>          
-	<script src="sdk/scripts/VSS.SDK.min.js"></script>
+	<script src="sdk/scripts/VSS.SDK.js"></script>
 	<script type="text/javascript">
 		console.log("1. VSS Init");
 
