--- a/configuration.html
+++ b/configuration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>          
-	<script src="sdk/scripts/VSS.SDK.min.js"></script>
+	<script src="sdk/scripts/VSS.SDK.js"></script>
 	<script type="text/javascript">
 		VSS.init({                        
 			explicitNotifyLoaded: true,
