corrected try catch

--- a/widget.html
+++ b/widget.html
@@ -22,9 +22,10 @@
 						{
 							console.log(widgetSettings);
 						}
-						catch()
+						catch(error)
 						{
 							console.log("1.1. error");
+							console.log(error);
 						}
 						
 						console.log("2. modif text");
